изменил название приложения

--- a/client/uploader.app/Contents/Info.plist
+++ b/client/uploader.app/Contents/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>auc_bundle</string>
+	<string>uploader</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
